# 2025_wt_prj_khudanych

./: .dockerignore  .gitignore  AI_AGENT_ENHANCEMENT.md  Dockerfile  I18N_FINAL_STATUS.md  LICENSE  README.md  REFACTORING_COMPLETE.md  START_HERE.md  TERRITORY_REFACTORING_COMPLETE.md  THIRD_PARTY_NOTICES.md  TRANSLATION_SAMPLES.md  build_mo_files.py  generate_fixtures.py  requirements.txt  setup_i18n.sh  test_refactoring.py
.github/workflows/: deploy.yml  seed.yml
deploy/: README.md  ansible.cfg  docker-compose.yml  inventory.ini  web-entrypoint.sh
deploy/config/: nginx.conf  production.env
deploy/playbooks/: deploy.yml  seed.yml
docs/: I18N_IMPLEMENTATION.md
fixtures/: countries.json  countries_raw.json  sample_europe.json
frontend/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  App.vue  main.tsx  style.css
prj/: action_map.json  action_summary.txt  ambiguous_for_ai.json  benchmark.py  build_mo_files.py  check_db.py  check_google_models.py  classify_flags_actions.py  db.sqlite3  db.sqlite3-journal  fetch_countries.py  requirements.txt  run_web.sh  wikidata_action_map.py
prj/app/: admin.py  api.py  apis.py  forms.py  models.py  schemas.py  sitemaps.py  tests.py  urls.py  views.py  views_old.py.backup
prj/data/: wikidata_actions.json
prj/flag_search_core/: Cargo.toml
prj/flag_search_core/src/: lib.rs
prj/prj/: settings.py  urls.py
prj/scripts/: test_admin_api.py
prj/templates/: about.html  api_playground.html  base.html  countries.html  flag_detail.html  (+7 more)
(+114 files in other folders)
